--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1145,6 +1145,18 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% if (isThesis) { -%>
 
 <%- include('varioref.example.en.tex', this); -%>
+<% if (bibtextool == 'biblatex') { -%>
+<%- include('biblatex.example.en.tex', this); %>
+<% } else { -%>
+<%= heading2 %>{Citations}
+
+<% } -%>
+
+In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote %>st<%- equote %>, <%- bquote %>nd<%- equote %>, \ldots:
+E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
+When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
+See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
+
 <%- include('thesis-additions.examples.en.tex', this); -%>
 <% } -%>
 <% } -%>
@@ -1262,12 +1274,7 @@ Hier bitte einen kurzen Durchgang durch die Arbeit.
 %%% Bibliography
 %%% ===============================================================================
 
-In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote %>st<%- equote %>, <%- bquote %>nd<%- equote %>, \ldots:
-E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
-When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
-See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
 <% switch (documentclass) { case "lncs": -%>
-
 \renewcommand{\bibsection}{\section*{Literatur}} % requried for natbib to have "References" printed and as section*, not chapter*
 % Use natbib compatbile splncs04nat style.
 % It does provide all features of splncs03, but is developed in a clean way.
@@ -1283,7 +1290,6 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{<%= filenames.bib %>}
 <%  break; case "ieee": -%>
-
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
 % adjust value as needed - may need to be readjusted if
@@ -1303,7 +1309,6 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 
 \printbibliography
 <% break; default: -%>
-
 \bibliographystyle{plain}
 \bibliography{<%= filenames.bib %>}
 <% break; } -%>
