--- a/generators/app/templates/biblatex.example.en.tex
+++ b/generators/app/templates/biblatex.example.en.tex
@@ -5,8 +5,10 @@ If a reference is not cited, it is not appearing there.
 
 <%- bexample %>
 Standard case: Citing indirectly citing something~\cite{mwe}.
-In case one wants to name the author: \textcite{mwe} \cite{mwe} shows a minimal \LaTeX{} example.
+In case one wants to name the author: \textcite{mwe} shows a minimal \LaTeX{} example.
 <%- eexample %>
+
+Note that \texttt{\textbackslash textcite\{mwe\}} prints both the author and the reference to the bibliography entry.
 
 Remember that you have to call \texttt{biber <%= filenames.main %>} to generate the bibliography data for \texttt{<%= reallatexcompiler %>}.
 You will need to run \texttt{<%= reallatexcompiler %>} twice to ensure that the page numbers are updated correctly.
