--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -44,8 +44,6 @@
   %
   showstringspaces=false,
   %
-  extendedchars=true,
-  %
 <% if (documentclass == "ustutt") { -%>
   basicstyle=\small\ttfamily,
   stepnumber=2,               % Abstand zwischen den Zeilennummern
@@ -96,9 +94,9 @@
 \ifpdftex
 <% } -%>
 <%= indent %>% Ermögliche Umlaute falls \lstinputputlisting genutzt wird
-<%= indent %>% Siehe https://stackoverflow.com/a/29260603/873282 für Details.
+<%= indent %>% Siehe https://stackoverflow.com/a/29260603/873282 und https://tex.stackexchange.com/a/24532/9075 für Details.
 <%= indent %>% listingsutf8 hat im Juni 2020 nicht funktioniert.
-<%= indent %>\lstset{literate=
+<%= indent %>\lstset{extendedchars=true, literate=
 <%= indent %>  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
 <%= indent %>{Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
 <%= indent %>{à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
