--- a/generators/app/templates/listings.preamble.en.tex
+++ b/generators/app/templates/listings.preamble.en.tex
@@ -44,8 +44,6 @@
   %
   showstringspaces=false,
   %
-  extendedchars=true,
-  %
 <% if (documentclass == "ustutt") { -%>
   basicstyle=\small\ttfamily,
   stepnumber=2,               % Abstand zwischen den Zeilennummern
@@ -91,14 +89,14 @@
   captionpos=b
 }
 <% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
+
 <% if (latexcompiler == "both") { indent = '  ' -%>
 \ifpdftex
 <% } -%>
-
 <%= indent %>% Enable Umlauts when using \lstinputputlisting.
-<%= indent %>% See https://stackoverflow.com/a/29260603/873282 für details.
+<%= indent %>% See https://stackoverflow.com/a/29260603/873282 and https://tex.stackexchange.com/a/24532/9075 for details.
 <%= indent %>% listingsutf8 did not work in June 2020.
-<%= indent %>\lstset{literate=
+<%= indent %>\lstset{extendedchars=true, literate=
 <%= indent %>  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
 <%= indent %>{Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
 <%= indent %>{à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
